[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/StoryAsset/storybackground.png" type="Texture" id=1]
[ext_resource path="res://assets/Font Colby/Colby-StBlk.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/StoryAsset/instruction2.png" type="Texture" id=3]
[ext_resource path="res://assets/StoryAsset/instruction1.png" type="Texture" id=4]
[ext_resource path="res://assets/StoryAsset/instruction3.png" type="Texture" id=5]
[ext_resource path="res://Scenes/StoryScene/Story.gd" type="Script" id=6]
[ext_resource path="res://assets/UIButtonsVideogames/72ppp/Buttons-189.png" type="Texture" id=7]
[ext_resource path="res://assets/UIButtonsVideogames/72ppp/Buttons-188.png" type="Texture" id=8]
[ext_resource path="res://assets/UIButtonsVideogames/72ppp/Buttons-167.png" type="Texture" id=9]
[ext_resource path="res://assets/UIButtonsVideogames/72ppp/Buttons-168.png" type="Texture" id=10]
[ext_resource path="res://assets/UIButtonsVideogames/72ppp/font/Colby-StBlk.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Sounds/platformerGame_bgm_package/Iceland Theme.mp3" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "textAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.505, 1.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "textAnim"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.505, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "textAnim"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.505, 1.0 ]
}

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 11 )

[node name="StoryScene" type="Node2D"]
script = ExtResource( 6 )

[node name="Story" type="Node2D" parent="."]

[node name="StorySprite" type="Sprite" parent="Story"]
position = Vector2( 511.169, 368.886 )
scale = Vector2( 1.41881, 1.40797 )
texture = ExtResource( 1 )

[node name="Texts" type="Node2D" parent="Story"]

[node name="Talk1" type="Node2D" parent="Story/Texts"]

[node name="text" type="Label" parent="Story/Texts/Talk1"]
margin_left = 140.0
margin_top = 233.0
margin_right = 908.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( -492, -26 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Hi There!
I'm Frag 
and nice to meet you!"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Story/Texts/Talk1"]
anims/textAnim = SubResource( 3 )

[node name="Talk2" type="Node2D" parent="Story/Texts"]

[node name="text" type="Label" parent="Story/Texts/Talk2"]
margin_left = 154.0
margin_top = 225.0
margin_right = 922.0
margin_bottom = 378.0
rect_pivot_offset = Vector2( -492, -26 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "I want to paint some nice painting. 
But I don't have any paints yet..."
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Story/Texts/Talk2"]
anims/textAnim = SubResource( 4 )

[node name="Talk3" type="Node2D" parent="Story/Texts"]

[node name="text" type="Label" parent="Story/Texts/Talk3"]
margin_left = 154.0
margin_top = 225.0
margin_right = 922.0
margin_bottom = 378.0
rect_pivot_offset = Vector2( -492, -26 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "So I will travel around the world 
to collect some colors.
 Thanks for joining my journey!"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Story/Texts/Talk3"]
anims/textAnim = SubResource( 5 )

[node name="Instuction" type="Node2D" parent="."]
position = Vector2( 511.169, 368.886 )
scale = Vector2( 1.419, 1.408 )

[node name="Instruction1" type="Sprite" parent="Instuction"]
visible = false
texture = ExtResource( 4 )

[node name="Instruction2" type="Sprite" parent="Instuction"]
visible = false
texture = ExtResource( 3 )

[node name="Instruction3" type="Sprite" parent="Instuction"]
visible = false
texture = ExtResource( 5 )

[node name="Buttons" type="Node2D" parent="."]

[node name="NextButton" type="TextureButton" parent="Buttons"]
margin_left = 849.0
margin_top = 666.0
margin_right = 1106.0
margin_bottom = 753.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Label" parent="Buttons"]
margin_left = 805.0
margin_top = 671.0
margin_right = 1050.0
margin_bottom = 712.0
custom_fonts/font = SubResource( 6 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkipButton" type="TextureButton" parent="Buttons"]
margin_left = 16.0
margin_top = 666.0
margin_right = 273.0
margin_bottom = 753.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Label" parent="Buttons"]
margin_left = -29.0
margin_top = 672.0
margin_right = 216.0
margin_bottom = 713.0
custom_fonts/font = SubResource( 7 )
text = "Skip"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -18.834
autoplay = true

[connection signal="pressed" from="Buttons/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Buttons/SkipButton" to="." method="_on_SkipButton_pressed"]
